Corrected the vertical align of the date

--- a/public/css/build.css
+++ b/public/css/build.css
@@ -200,3 +200,8 @@ input[type="radio"] .styled:checked + label::before {
 input[type="checkbox"] .styled:checked + label::after,
 input[type="radio"] .styled:checked + label::after {
   color: #fff; }
+
+
+  .valign{
+    margin-top: 12px;
+  }
